package тесты